[package]
name = "three-body"
version = "0.1.0"
edition = "2024"

[dependencies]
gif = "0.13.3"
glam = { version = "0.30", features = ["serde"] }
ordered-float = "5"
raqote = { version = "0.8.5", default-features = false }
rayon = "1.10.0"
rustfft = "6.4.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8.23"
